--- a/FRONT/CSS/style_chat.css
+++ b/FRONT/CSS/style_chat.css
@@ -32,7 +32,7 @@ body {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     opacity: 0;
-    transition: height 0.8s ease, opacity 0.5s ease;
+    transition: height 8s ease, opacity 0.5s ease;
 }
 
 /* Conteneur des messages du chatbot */
@@ -164,6 +164,7 @@ body {
     background-color: #0056b3;
 }
 
+/*Background*/
 iframe {
     width: 100%;
     height: 100%;
